--- a/requirements.txt
+++ b/requirements.txt
@@ -1,102 +1,20 @@
-absl-py==0.13.0
-altgraph==0.17.2
-astunparse==1.6.3
-auto-py-to-exe==2.10.0
-backcall==0.2.0
-beautifulsoup4==4.7.1
-bottle==0.12.19
-bottle-websocket==0.2.9
-cachetools==4.2.2
-certifi==2019.3.9
+asgiref==3.4.1
+certifi==2021.5.30
 cffi==1.14.6
-chardet==3.0.4
-Click==7.0
-colorama==0.4.4
+charset-normalizer==2.0.6
 cryptography==35.0.0
-cssselect==1.1.0
-cycler==0.10.0
-decorator==5.0.9
-Eel==0.12.4
-feedfinder2==0.0.4
-feedparser==6.0.2
-flatbuffers==1.12
-future==0.18.2
-gast==0.4.0
-gevent==21.8.0
-gevent-websocket==0.10.1
-google-auth==1.34.0
-google-auth-oauthlib==0.4.5
-google-pasta==0.2.0
-greenlet==1.1.2
-grpcio==1.34.1
-h5py==3.1.0
-idna==2.8
-install==1.3.4
-ipython==7.26.0
-ipython-genutils==0.2.0
-itsdangerous==1.1.0
-jedi==0.18.0
-jieba3k==0.35.1
-Jinja2==2.10
-joblib==1.0.1
-Keras==2.4.3
-keras-nightly==2.5.0.dev2021032900
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.1
-lxml==4.6.3
-Markdown==3.3.4
-MarkupSafe==1.1.1
-matplotlib==3.4.2
-matplotlib-inline==0.1.2
-newspaper3k==0.2.8
-nltk==3.6.2
-numpy==1.19.5
-oauthlib==3.0.1
-opencv-python==4.5.3.56
-opt-einsum==3.3.0
-parso==0.8.2
-pefile==2021.9.3
-pickleshare==0.7.5
-Pillow==8.2.0
-prompt-toolkit==3.0.19
-protobuf==3.17.3
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
+defusedxml==0.7.1
+Django==3.2.8
+django-debug-toolbar==3.2.2
+idna==3.2
+oauthlib==3.1.1
 pycparser==2.20
-pygame==2.0.1
-Pygments==2.9.0
-pyinstaller==4.5.1
-pyinstaller-hooks-contrib==2021.3
-pyparsing==2.4.7
-python-dateutil==2.8.0
-pywin32-ctypes==0.2.0
-PyYAML==5.1
-regex==2021.4.4
-requests==2.21.0
-requests-file==1.4.3
-requests-oauthlib==1.2.0
-rsa==4.7.2
-scipy==1.7.0
-sgmllib3k==1.0.0
-singledispatch==3.4.0.3
-six==1.15.0
-soupsieve==1.8
-tensorboard==2.5.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow-estimator==2.5.0
-termcolor==1.1.0
-tinysegmenter==0.3
-tldextract==2.2.1
-torch==1.9.0
-tqdm==4.61.0
-traitlets==5.0.5
-twython==3.8.2
-typing-extensions==3.7.4.3
-urllib3==1.24.1
-wcwidth==0.2.5
-Werkzeug==0.15.1
-whichcraft==0.6.1
-wrapt==1.12.1
-zope.event==4.5.0
-zope.interface==5.4.0
+PyJWT==2.2.0
+python3-openid==3.2.0
+pytz==2021.3
+requests==2.26.0
+requests-oauthlib==1.3.0
+social-auth-app-django==5.0.0
+social-auth-core==4.1.0
+sqlparse==0.4.2
+urllib3==1.26.7
